@startuml
class Users {
  id : uuid
  first_name : string
  last_name : string
  email : string
}

class UserAuthenticationDetails {
  id : uuid
  user_id : uuid
  email : string
  password : string
  token: string
}

class Wallets {
  id : uuid
  user_id : uuid
  balance_cents: int
  currency: str
}

class Transactions {
  id : uuid
  wallet_id : uuid
  amount_cents: int
  type: str [credit | debit]
  created_at: utc_date
}

class Transfers {
  id : uuid
  sender_user_id : uuid
  receiver_user_id : uuid
  amount_cents: int
  currency: str
  created_at: utc_date
}

Users "1" *--* "1*" UserAuthenticationDetails
Users "1" *-- "0..*" Wallets
Users "1" *-- "0..*" Transfers
Wallets "1" *-- "0..*" Transactions

@enduml

